2002-10-30  KUBO Takehiro  <kubo@jiubao.org>

	* sample/calculator.rb, sample/canvas-arrowhead.rb,
	sample/canvas-features.rb, sample/canvas-fifteen.rb,
	sample/canvas-primitives.rb, sample/canvas.rb,
	sample/clock.rb, sample/flower.png, sample/less.rb,
	sample/number-entry.rb, sample/paper-selector.rb,
	sample/toroid.png: Delete obsolete sample files. 

2002-10-30  KUBO Takehiro  <kubo@jiubao.org>

	* src/rbgnome-about.c: Gnome::Abount accepts nil as 7th argument.
	* src/rbgnome-app-helper.c: Add Gtk::MenuShell#fill_menus.
	Rename ary_to_ui_info to rbgno_ary_to_ui_info and export it.
	Change rbgno_ary_to_ui_info to Support Gnome::PopupMenu.
	* src/rbgnome-help.c: Delete raise_gerror and use
	rbgutil_raise_gerror instead.
	* src/rbgnome.h, src/rbgnome.c: call Init_gnome_popup_menu in 
	Init_gnome2.
	* src/rbgnome_popup_menu.c: Add a new file. Support
	Gnome::PopupMenu.

2002-10-28  KUBO Takehiro  <kubo@jiubao.org>

	* sample/gnome-init-popt.rb: Removed.
	* sample/gnome-program.rb: Added.
	* src/rbgnome-program.c: Move popt features to src/rbpopt.c.
	Enhance Gnome::Program.new()
	Add Ruby/GNOME2 original methods Gnome::Program#args(), options(),
	print_help(), and print_usage().
	Add Gnome::ModuleInfo#==, ===, eql?, <=>, and hash.
	* src/rbgnome.c: Move popt features to src/rbpopt.c.
	* src/rbgnome.h: Add prototypes: rbgno_poptoption_raw_to_arary(),
	rbgno_poptoption_array_to_obj(), rbgno_poptoption_arg_to_hash(),
	and Init_gnome_popt().
	* src/rbpopt.c: call Init_gnome_popt() in Init_gnome2().

2002-10-27  KUBO Takehiro  <kubo@jiubao.org>

	* src/rbgnome-app-helper.c: Add new methods
	Gtk::ToolBar.fill_toolbar(), Gtk::MenuShell.find_menu_pos(),
	Gnome::App.install_menu_hints() and Gtk::ToolBar.setup_toolbar().
	* src/rbgnome-app.c: change the return value of 
	Gnome::App.add_docked().
	* src/rbgnome-client.c: Rename Gnome::Client#get_flags() -> flags().
	Add new methods Gnome::Client#request_interaction() and 
	interaction_key_return().